--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -64,7 +64,7 @@ hr {
 
 pre {
   font-size: 1em; /* 2 */
-  font-family: monospace, monospace; /* 1 */
+  font-family: monospace; /* 1 */
 }
 
 /* Text-level semantics
@@ -108,7 +108,7 @@ code,
 kbd,
 samp {
   font-size: 1em; /* 2 */
-  font-family: monospace, monospace; /* 1 */
+  font-family: monospace; /* 1 */
 }
 
 /**
