--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -29,6 +29,8 @@
 }
 
 body {
+  position: relative;
+
   color: var(--dark);
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
@@ -73,8 +75,9 @@ h3 {
 
   color: var(--white);
   font-weight: 700;
-  line-height: 50px;
+  line-height: 48px;
   text-align: center;
+  text-transform: uppercase;
   text-decoration: none;
 
   background-color: var(--basic);
@@ -82,10 +85,22 @@ h3 {
 }
 
 .header {
+  position: relative;
+}
+
+.background-basic::before {
+  position: absolute;
+  top: 0;
+
+  width: 100%;
+  height: 100%;
+
   background-image: url('../images/background.png');
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: 0.9;
+  opacity: 0.1;
+
+  content: '';
 }
 
 .header-container {
@@ -115,7 +130,7 @@ h3 {
 .header-description {
   display: flex;
   justify-content: space-between;
-  margin-top: 190px;
+  margin-top: 185px;
 }
 
 .header-left-content {
