--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -29,7 +29,7 @@
 }
 
 body {
-  position: relative;
+  /* position: relative; */
 
   color: var(--dark);
   font-size: 16px;
@@ -51,7 +51,11 @@ section {
 h1,
 h2,
 h3 {
+  margin: 0;
+  padding: 0;
+
   font-family: 'Neucha', cursive;
+
   line-height: 1.2em;
 }
 
@@ -86,6 +90,12 @@ h3 {
 
 .header {
   position: relative;
+
+  padding-top: 100px;
+
+  overflow: hidden;
+
+  background-color: var(--light);
 }
 
 .background-basic::before {
@@ -103,15 +113,7 @@ h3 {
   content: '';
 }
 
-.header-container {
-  position: relative;
-
-  overflow: hidden;
-}
-
 .header-title {
-  margin-top: 100px;
-
   font-weight: 400;
 }
 
@@ -120,17 +122,21 @@ h3 {
 }
 
 .header-image {
-  position: absolute;
-  top: 40px;
-  right: -325px;
+  position: relative;
+  top: -302px;
+  right: -298px;
 
   height: 525px;
+}
+
+.header-image img {
+  width: 97%;
 }
 
 .header-description {
   display: flex;
   justify-content: space-between;
-  margin-top: 185px;
+  margin-top: -340px;
 }
 
 .header-left-content {
