--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,19 +1,23 @@
-@font-face {
-  font-weight: 400;
-  font-family: 'Neucha';
-  src: url('../asserts/fonts/Neucha-Regular.ttf');
+* {
+  box-sizing: border-box;
 }
 
 @font-face {
   font-weight: 400;
-  font-family: 'Open Sans';
-  src: url('../asserts/fonts/OpenSans-Regular.ttf');
+  font-family: "Neucha";
+  src: url("../asserts/fonts/Neucha-Regular.ttf");
+}
+
+@font-face {
+  font-weight: 400;
+  font-family: "Open Sans";
+  src: url("../asserts/fonts/OpenSans-Regular.ttf");
 }
 
 @font-face {
   font-weight: 700;
-  font-family: 'Open Sans';
-  src: url('../asserts/fonts/OpenSans-Bold.ttf');
+  font-family: "Open Sans";
+  src: url("../asserts/fonts/OpenSans-Bold.ttf");
 }
 
 :root {
@@ -29,11 +33,9 @@
 }
 
 body {
-  /* position: relative; */
-
   color: var(--dark);
   font-size: 16px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   line-height: 1.6em;
 
   background-color: var(--white);
@@ -54,7 +56,7 @@ h3 {
   margin: 0;
   padding: 0;
 
-  font-family: 'Neucha', cursive;
+  font-family: "Neucha", cursive;
 
   line-height: 1.2em;
 }
@@ -69,6 +71,11 @@ h2 {
 
 h3 {
   font-size: 34px;
+}
+
+p {
+  margin: 0;
+  padding: 0;
 }
 
 .btn {
@@ -88,8 +95,13 @@ h3 {
   cursor: pointer;
 }
 
+.btn:hover {
+  background: #ea7600;
+}
+
 .header {
   position: relative;
+  z-index: 1;
 
   padding-top: 100px;
 
@@ -101,16 +113,20 @@ h3 {
 .background-basic::before {
   position: absolute;
   top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
 
   width: 100%;
   height: 100%;
 
-  background-image: url('../images/background.png');
+  background-image: url("../images/background.png");
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.1;
 
-  content: '';
+  content: "";
 }
 
 .header-title {
@@ -127,10 +143,6 @@ h3 {
   right: -298px;
 
   height: 525px;
-}
-
-.header-image img {
-  width: 97%;
 }
 
 .header-description {
@@ -154,6 +166,9 @@ h3 {
 }
 
 .about {
+  margin: 0;
+  margin-top: 100px;
+
   text-align: center;
 }
 
@@ -163,11 +178,77 @@ h3 {
 
 .about-description {
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .about-video {
   position: relative;
-  top: 100px;
 
   filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
+}
+
+.cognitive-biases {
+  margin-top: -100px;
+  padding-top: 200px;
+  padding-bottom: 100px;
+
+  background-color: var(--basicDark);
+}
+
+.cognitive-biases-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-left: 0;
+
+  list-style-type: none;
+}
+
+.cognitive-biases-item {
+  width: 350px;
+  margin-top: 20px;
+  padding: 24px;
+
+  background-color: var(--light);
+}
+
+.cognitive-biases-link {
+  text-decoration: none;
+}
+
+.white-color {
+  color: var(--white);
+}
+
+.cognitive-biases-item-description {
+  padding: 0;
+
+  background-color: var(--basicDark);
+}
+
+.cognitive-biases-list-description {
+  font-weight: 400;
+  font-size: 52px;
+}
+
+.cognitive-biases-item-count {
+  margin-bottom: 40px;
+
+  color: var(--basicDark);
+  font-size: 64px;
+  font-family: "Neucha", cursive;
+  line-height: 1;
+}
+
+.cognitive-biases-title {
+  margin-bottom: 16px;
+
+  color: var(--basic);
+  font-weight: 400;
+}
+
+.cognitive-biases-description {
+  color: var(--dark);
+  font-weight: 400;
+  text-transform: inherit;
 }
