--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -262,6 +262,12 @@ p {
   text-transform: inherit;
 }
 
+.cognitive-biases-item:not(:first-child):hover {
+  color: var(--white);
+
+  background-color: var(--basic);
+}
+
 .card {
   position: relative;
   z-index: -2;
