--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -299,11 +299,13 @@ p {
 .card-header {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 100px;
+  margin-bottom: 90px;
 }
 
 .card-image {
   vertical-align: middle;
+
+  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
 }
 
 .ikea-effect-title-block {
@@ -369,6 +371,10 @@ p {
 
 .card-description-right {
   padding-left: 30px;
+}
+
+.ikea-effect-card-description-right {
+  padding-left: 15px;
 }
 
 .premature-optimization-pre-title {
